--- a/Day_4/lists.ipynb
+++ b/Day_4/lists.ipynb
@@ -227,14 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 5, 6, ['a', 'b', 'c'], ['abc'], ['bat', 'cat'], 6.7]\n"
+      "[4, 5, 6, ['a', 'b', 'c'], ['abc'], ['bat', 'cat'], 6.7]\n",
+      "0x10492e588\n"
      ]
     }
    ],
@@ -242,7 +243,8 @@
     "org = [4,5,6,[\"a\",\"b\",\"c\"],[\"abc\"],[\"bat\",\"cat\"],6.7]\n",
     "cop = copy.copy(org)\n",
     "org[0] = 1\n",
-    "print(cop)"
+    "print(cop)\n",
+    "print(hex(id(cop)))"
    ]
   },
   {
@@ -334,7 +336,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "phrase = \"This is Python\"\n",
+    "phrase.split()\n",
+    "phrase.split(\";\")"
+   ]
   }
  ],
  "metadata": {
